# backend/docs/swagger.json
@@ -295,6 +295,53 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Removes a product from the user's cart",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Remove item from cart",
+                "parameters": [
+                    {
+                        "description": "Delete Cart Item payload",
+                        "name": "cartItem",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.DeleteCartItemRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/cart/{user_id}": {
@@ -588,6 +635,17 @@
                 }
             }
         },
+        "handlers.DeleteCartItemRequest": {
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -622,11 +680,14 @@
                 "discount_value": {
                     "type": "number"
                 },
-                "end_at": {
-                    "type": "string"
+                "every": {
+                    "type": "number"
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "limit": {
+                    "type": "number"
                 },
                 "list_product_category_id": {
                     "type": "array",
@@ -635,9 +696,6 @@
                     }
                 },
                 "name": {
-                    "type": "string"
-                },
-                "start_at": {
                     "type": "string"
                 }
             }
@@ -650,6 +708,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "rank": {
+                    "type": "integer"
                 }
             }
         },
@@ -688,20 +749,23 @@
                     "type": "string"
                 },
                 "discount_type": {
-                    "description": "\"percent\", \"fixed\", \"userPoint\"",
+                    "description": "\"percent\", \"fixed\", \"point\", \"spendAndSave\"",
                     "type": "string"
                 },
                 "discount_value": {
                     "type": "number"
                 },
-                "end_at": {
-                    "type": "string"
+                "every": {
+                    "type": "number"
                 },
                 "id": {
                     "type": "string"
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "limit": {
+                    "type": "number"
                 },
                 "name": {
                     "type": "string"
@@ -711,9 +775,6 @@
                     "items": {
                         "$ref": "#/definitions/models.ProductCategory"
                     }
-                },
-                "start_at": {
-                    "type": "string"
                 }
             }
         },
@@ -728,6 +789,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "rank": {
+                    "type": "integer"
                 }
             }
         },
